--- a/agile-dev/index.html
+++ b/agile-dev/index.html
@@ -4,9 +4,9 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href=""/>
+    <link type="text/css" rel="stylesheet" href="./css/materialize.css"/>
     <!--Import your custom.css-->
-    <link type="text/css" rel="stylesheet" href=""/>
+    <link type="text/css" rel="stylesheet" href="./css/custom.css"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>🤙 Yo! application 🤙 | Simplon</title>
@@ -14,7 +14,136 @@
   <body>
    
     <!-- Start code here -->
-    
+    <nav class="black" role="navigation">
+      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#">Navbar Link</a></li>
+        </ul>
+  
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="#">Navbar Link</a></li>
+        </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  
+    <!-- SECTION 1-->
+  
+    <div class="section no-pad-bot" id="index-banner">
+      <div class="container">
+        <br><br>
+        <h1 class="header center orange-text">YO APP !</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        </div>
+        <div class="row center">
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+        </div>
+        <br><br>
+  
+      </div>
+    </div>
+  
+  <!-- SECTION 2-->
+    <div class="container">
+      <div id="section2" class="section">
+        <div id="imgsection2">
+          <img src="./img/iphone_side_light.png" alt="Une photo Iphone">
+        </div>
+        <div id="section2contenu">
+          <h3>Bénéfices</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam recusandae, deleniti ab fuga illum libero. Quas impedit odio fugit modi ducimus ratione, accusamus ullam totam hic numquam, expedita perspiciatis nam!</p>
+          <img src="./img/download_android.png" alt="Une image Android">
+      </div>
+        </div>
+  
+      </div>
+      <br><br>
+    </div>
+  
+  <!-- SECTION 3-->
+    <div class="container">
+      <div id="section3">
+        <div id="section3feature">
+          <h3>Feature</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet repellat itaque autem vitae inventore iste dolor optio </p>
+        </div>
+
+        <img src="./img/iphone_features_light.png" alt="Une image iphone"></img>
+          <div id="section3feature2">
+            <h3>Feature</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet repellat itaque autem vitae inventore iste dolor optio </p>
+          </br> 
+            <h3>Feature</h3>
+          </br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet repellat itaque autem vitae inventore iste dolor optio </p>
+          </div>
+        </div>
+  
+      </div>
+      <br><br>
+    </div>
+
+  <!-- SECTION 4-->
+    <div class="container">
+      <div id="section4" class="section">
+        <div id="winaiphone">
+          <h3>Win a new Iphone</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet repellat itaque autem vitae inventore iste dolor optio </p>
+          <img id="iphoneimg" src="./img/iphone_cover_light.png" alt="Une image Iphone"></img>
+        </div>
+
+        <div id="imgsection4">
+          <img  src="./img/Capture d’écran du 2023-11-23 15-35-12.png" alt="Le formulaire"></img>
+        </div>
+        
+        </div>
+  
+      </div>
+      <br><br>
+    </div>
+
+    <footer class="page-footer orange">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Company Bio</h5>
+            <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p></br></br>
+  
+  
+          </div>
+          <div class="col l3 s12">
+            <h5 class="white-text">Settings</h5>
+            <ul>
+              <li><a class="white-text" href="#!">Link 1</a></li>
+              <li><a class="white-text" href="#!">Link 2</a></li>
+              <li><a class="white-text" href="#!">Link 3</a></li>
+              <li><a class="white-text" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+          <div class="col l3 s12">
+            <h5 class="white-text">Connect</h5>
+            <ul>
+              <li><a class="white-text" href="#!">Link 1</a></li>
+              <li><a class="white-text" href="#!">Link 2</a></li>
+              <li><a class="white-text" href="#!">Link 3</a></li>
+              <li><a class="white-text" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        </div>
+      </div>
+    </footer>
+  
+  
+    <!--  Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/init.js"></script>
     <!-- finish code here -->
 
     <!--Import materialize.js - JavaScript at end of body for optimized loading-->
